# WLHPython

./: pyproject.toml
WLHPy/: i18n.py  main.py  pain.py
WLHPy/Projects/Project_1/: characters.xml  project.xml
WLHPy/app/: __init__.py
WLHPy/data/: __init__.py  globals.py  wlh.atd
WLHPy/data/sql/: projects.sql  users.sql
WLHPy/gui/: globals.py  mdi.py
WLHPy/gui/dialogs/first_run/: __init__.py  actions.py  definitions.py  dialog.ui  first_run.py____  globals.py
WLHPy/gui/docks/: dock.py
WLHPy/gui/docks/list/: list.py  list.ui
WLHPy/gui/mdis/: users.ui
WLHPy/gui/windows/: window.py  window_copy.py
WLHPy/gui/windows/main_window/: main_window.ui  window.py
WLHPy/i18n/: de.json
