[tool.poetry]
name = "WLHPy"
version = "0.1.0"
description = ""
authors = ["tvx17 <chris19177@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
PyQt6 = "^6.4.0"
python-i18n = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
